--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ public/js/vendor/*/*gitignore*
 public/js/vendor/*/*npmignore*
 public/js/vendor/*/*grunt*
 public/js/vendor/*/*.md*
+saves/*
+saves2/*
